--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,45 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Rust
-      uses: actions/setup-rust@v1
+      uses: actions-rs/toolchain@v1
+      with:
+        rust-version: stable
+    - name: Test all rust libraries
+      run: |
+        echo "Searching for Rust project subfolders..."
+        for dir in $(find . -type f -name 'Cargo.toml' -exec dirname {} \;); do
+          if [ -f "$dir/Makefile" ]; then
+            echo "Running make test in $dir"
+            (cd "$dir" && make test)
+          else
+            echo "Skipping $dir (no Makefile)"
+          fi
+        done
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Rust
+      uses: actions-rs/toolchain@v1
       with:
         rust-version: stable
     - name: Build
-      run: cargo build --verbose
+      run:  |
+        echo "Searching for Rust project subfolders..."
+        for dir in $(find . -type f -name 'Cargo.toml' -exec dirname {} \;); do
+          if [ -f "$dir/Makefile" ]; then
+            echo "Running make test in $dir"
+            (cd "$dir" && make release)
+          else
+            echo "Skipping $dir (no Makefile)"
+          fi
+        done
