CRS-2 :: Data Engineering with Rust - module 1 - Data Engineering with Rust Sandbox :: v3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,10 +46,6 @@ jobs:
       run:  |
         echo "Searching for Rust project subfolders..."
         for dir in $(find . -type f -name 'Cargo.toml' -exec dirname {} \;); do
-          if [ -f "$dir/Makefile" ]; then
-            echo "Running make test in $dir"
+            echo "Running make release in $dir"
             (cd "$dir" && make release)
-          else
-            echo "Skipping $dir (no Makefile)"
-          fi
         done
