--- a/rs_filereader_v1/MakeFile
+++ b/rs_filereader_v1/MakeFile
@@ -1,5 +1,5 @@
 rust-versions:
-	@echo "Rust command-line utility versions:"
+	@echo "Rust command-line utilities versions:"
 	rustc --version						# rust compiler
 	cargo --version						# rust package manager
 	rustfmt --version					# rust formatter
