--- a/catsay/Cargo.toml
+++ b/catsay/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
+assert_cmd = "2.0.17"
 clap = { version = "4.5.37", features = ["derive"] }
 colored = "3.0.0"
+predicates = "3.1.3"
